--- a/package.json
+++ b/package.json
@@ -8,31 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~40.0.0",
-    "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12",
-    "formik": "*",
-    "modal.js": "*",
-    "expo-constants": "~9.3.3",
-    "react-hook-form": "*",
-    "tcomb-form-native": "*",
     "@expo/vector-icons": "^12.0.0",
-    "react-native-modal": "*",
-    "react-native-paper": "3.6.0",
-    "react-native-screens": "~2.15.2",
-    "react-native-elements": "*",
-    "@react-navigation/stack": "*",
-    "react-interval-rerender": "*",
-    "react-native-reanimated": "~1.13.0",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "*",
     "@react-navigation/native": "5.0.5",
-    "react-native-vector-icons": "*",
+    "@react-navigation/stack": "*",
+    "expo": "~40.0.0",
+    "expo-cli": "^4.4.3",
+    "expo-constants": "~9.3.3",
+    "expo-status-bar": "~1.0.3",
+    "formik": "*",
+    "modal.js": "*",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-hook-form": "*",
+    "react-interval-rerender": "*",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "*",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-modal": "*",
+    "react-native-paper": "3.6.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
-    "@react-native-community/masked-view": "0.1.10"
+    "react-native-screens": "~2.15.2",
+    "react-native-vector-icons": "*",
+    "react-native-web": "~0.13.12",
+    "tcomb-form-native": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
